bugfix format 0.2